tests/NormalTests/paczka1/fuzzy1/53663231.err
Error in line 2: dPYM A509 71,3
Error in line 14: lPy S281 19,2
Error in line 20: A509 S281 61,1
Error in line 12: I56UEKU S106 23,7
Error in line 11: hqSQv1Ut S810 0,7
Error in line 24: hqSQv1Ut A509 65,1
Error in line 22: I56UEKU S810 28,9
Error in line 26: I56UEKU S281 65,7
Error in line 35: dPYM S106 142,7
